webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.webook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webook
                port:
                  number: 88
